--- a/src/main/resources/com/example/kursinis/user-form.fxml
+++ b/src/main/resources/com/example/kursinis/user-form.fxml
@@ -10,24 +10,31 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kursinis.fxControllers.UserForm">
    <children>
-      <RadioButton fx:id="userRadio" alignment="TOP_LEFT" layoutX="47.0" layoutY="44.0" mnemonicParsing="false" onAction="#disableFields" selected="true" text="User">
+      <RadioButton fx:id="userRadio" alignment="TOP_LEFT" layoutX="45.0" layoutY="35.0" mnemonicParsing="false" onAction="#disableFields" selected="true" text="User">
          <toggleGroup>
             <ToggleGroup fx:id="userType" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="restaurantRadio" alignment="TOP_LEFT" layoutX="194.0" layoutY="44.0" mnemonicParsing="false" onAction="#disableFields" text="Restaurant" toggleGroup="$userType" />
-      <RadioButton fx:id="clientRadio" alignment="TOP_LEFT" layoutX="340.0" layoutY="44.0" mnemonicParsing="false" onAction="#disableFields" text="Client" toggleGroup="$userType" />
-      <RadioButton fx:id="driverRadio" alignment="TOP_LEFT" layoutX="481.0" layoutY="44.0" mnemonicParsing="false" onAction="#disableFields" text="Driver" toggleGroup="$userType" />
-      <TextField fx:id="loginField" layoutX="44.0" layoutY="92.0" />
-      <PasswordField fx:id="passwordField" layoutX="44.0" layoutY="130.0" />
-      <PasswordField fx:id="passwordFieldTwo" layoutX="44.0" layoutY="167.0" />
-      <TextField fx:id="nameField" layoutX="45.0" layoutY="211.0" />
-      <TextField fx:id="surnameField" layoutX="47.0" layoutY="252.0" />
-      <TextField fx:id="phoneNumberField" layoutX="48.0" layoutY="292.0" />
-      <Button fx:id="saveButton" layoutX="279.0" layoutY="327.0" mnemonicParsing="false" onAction="#createNewUser" text="Save" />
-      <AnchorPane fx:id="restaurantInfoPane" layoutX="233.0" layoutY="92.0" prefHeight="200.0" prefWidth="200.0">
+      <RadioButton fx:id="restaurantRadio" alignment="TOP_LEFT" layoutX="145.0" layoutY="35.0" mnemonicParsing="false" onAction="#disableFields" text="Restaurant" toggleGroup="$userType" />
+      <RadioButton fx:id="clientRadio" alignment="TOP_LEFT" layoutX="285.0" layoutY="35.0" mnemonicParsing="false" onAction="#disableFields" text="Client" toggleGroup="$userType" />
+      <RadioButton fx:id="driverRadio" alignment="TOP_LEFT" layoutX="400.0" layoutY="35.0" mnemonicParsing="false" onAction="#disableFields" text="Driver" toggleGroup="$userType" />
+      <TextField fx:id="usernameField" layoutX="45.0" layoutY="80.0" promptText="username" />
+      <PasswordField fx:id="passwordField" layoutX="45.0" layoutY="120.0" promptText="password" />
+      <PasswordField fx:id="passwordFieldTwo" layoutX="45.0" layoutY="160.0" promptText="password" />
+      <TextField fx:id="nameField" layoutX="45.0" layoutY="200.0" promptText="name" />
+      <TextField fx:id="surnameField" layoutX="45.0" layoutY="240.0" promptText="surname" />
+      <TextField fx:id="phoneNumberField" layoutX="45.0" layoutY="280.0" promptText="phone number" />
+      <Button fx:id="saveButton" layoutX="280.0" layoutY="361.0" mnemonicParsing="false" onAction="#createNewUser" text="Save" />
+      <AnchorPane fx:id="driverInfoPane" layoutX="207.0" layoutY="67.0" prefHeight="157.0" prefWidth="195.0">
          <children>
-            <DatePicker fx:id="dateOne" layoutX="12.0" layoutY="14.0" />
-            <DatePicker fx:id="dateTwo" layoutX="12.0" layoutY="55.0" />
+            <DatePicker fx:id="bDateField" layoutX="14.0" layoutY="14.0" promptText="birth date" />
+            <TextField fx:id="licenseField" layoutX="14.0" layoutY="54.0" promptText="license" />
+            <TextField fx:id="vehicleTypeField" layoutX="14.0" layoutY="94.0" promptText="vehicleType" />
+         </children>
+      </AnchorPane>
+      <TextField fx:id="addressField" layoutX="45.0" layoutY="320.0" promptText="address" />
+      <AnchorPane fx:id="restaurantInfoPane" layoutX="400.0" layoutY="80.0" prefHeight="157.0" prefWidth="195.0">
+         <children>
+            <TextField fx:id="menuField" layoutX="14.0" layoutY="2.0" promptText="Menu" />
          </children>
       </AnchorPane>
    </children>
