--- a/src/main/resources/com/example/kursinis/main-form.fxml
+++ b/src/main/resources/com/example/kursinis/main-form.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="382.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kursinis.fxControllers.MainForm">
    <children>
       <TabPane layoutX="1.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
@@ -30,7 +29,7 @@
                               <TableColumn prefWidth="98.4000244140625" text="Order history" />
                           </columns>
                         </TableView>
-                        <Button layoutX="251.0" layoutY="311.0" mnemonicParsing="false" text="CreateNewUser" />
+                        <Button fx:id="createButton" layoutX="251.0" layoutY="311.0" mnemonicParsing="false" onAction="#registerNewUser" text="CreateNewUser" />
                      </children>
                   </AnchorPane>
             </content>
