--- a/src/main/resources/com/example/kursinis/main-form.fxml
+++ b/src/main/resources/com/example/kursinis/main-form.fxml
@@ -1,59 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="382.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kursinis.fxControllers.MainForm">
    <children>
-      <TabPane layoutX="1.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabsPane" layoutX="1.0" prefHeight="389.0" prefWidth="744.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="User management">
+          <Tab fx:id="userTab" onSelectionChanged="#reloadTableData" text="User management">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="493.0" prefWidth="722.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="350.0" prefWidth="702.0">
                      <children>
-                        <TableView layoutX="13.0" layoutY="14.0" prefHeight="283.0" prefWidth="574.0">
+                        <TableView fx:id="userTable" layoutX="13.0" layoutY="14.0" prefHeight="283.0" prefWidth="721.0">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="id" />
-                              <TableColumn prefWidth="75.0" text="Login" />
-                              <TableColumn prefWidth="75.0" text="Password" />
-                              <TableColumn prefWidth="75.0" text="Name" />
-                              <TableColumn prefWidth="75.0" text="Surname" />
-                              <TableColumn prefWidth="75.0" text="Action" />
-                              <TableColumn prefWidth="98.4000244140625" text="Order history" />
+                            <TableColumn fx:id="idCol" prefWidth="75.0" text="ID" />
+                              <TableColumn fx:id="userTypeCol" prefWidth="75.0" text="User Type" />
+                              <TableColumn fx:id="usernameCol" prefWidth="75.0" text="Username" />
+                              <TableColumn fx:id="passwordCol" prefWidth="75.0" text="Password" />
+                              <TableColumn fx:id="nameCol" prefWidth="75.0" text="Name" />
+                              <TableColumn fx:id="surnameCol" prefWidth="75.0" text="Surname" />
+                              <TableColumn fx:id="phoneNumCol" prefWidth="108.0" text="Phone Number" />
+                              <TableColumn fx:id="addressCol" prefWidth="109.0" text="Address" />
+                              <TableColumn fx:id="actionCol" prefWidth="51.0" text="Action" />
                           </columns>
                         </TableView>
-                        <Button fx:id="createButton" layoutX="251.0" layoutY="311.0" mnemonicParsing="false" onAction="#registerNewUser" text="CreateNewUser" />
+                        <Button fx:id="createButton" layoutX="302.0" layoutY="317.0" mnemonicParsing="false" onAction="#registerNewUser" text="CreateNewUser" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Restaurant orders">
+          <Tab fx:id="managementTab" onSelectionChanged="#reloadTableData" text="Order management">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView layoutX="14.0" layoutY="14.0" prefHeight="342.0" prefWidth="213.0" />
-                        <ComboBox layoutX="257.0" layoutY="14.0" prefWidth="150.0" />
-                        <ComboBox layoutX="257.0" layoutY="57.0" prefWidth="150.0" />
+                        <ListView fx:id="ordersList" layoutX="14.0" layoutY="56.0" prefHeight="292.0" prefWidth="210.0">
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu></ListView>
+                        <ComboBox fx:id="clientList" layoutX="258.0" layoutY="56.0" prefWidth="150.0" />
+                        <TextField fx:id="titleField" layoutX="259.0" layoutY="91.0" />
+                        <Button layoutX="258.0" layoutY="317.0" mnemonicParsing="false" onAction="#createOrder" text="New" />
+                        <Button layoutX="439.0" layoutY="317.0" mnemonicParsing="false" onAction="#updateOrder" text="Update" />
+                        <Button layoutX="664.0" layoutY="317.0" mnemonicParsing="false" onAction="#deleteOrder" text="Delete" />
+                        <TextField fx:id="priceField" layoutX="259.0" layoutY="126.0" />
+                        <ComboBox fx:id="restaurantField" layoutX="258.0" layoutY="161.0" onAction="#loadRestaurantMenuForOrder" prefWidth="150.0" />
+                        <ComboBox fx:id="filterStatus" layoutX="14.0" layoutY="14.0" onAction="#filterOrders" prefWidth="150.0" />
+                        <ComboBox fx:id="filterOrders" layoutX="171.0" layoutY="14.0" onAction="#filterOrders" prefWidth="150.0" />
+                        <DatePicker fx:id="filterFrom" layoutX="333.0" layoutY="14.0" onAction="#filterOrders" />
+                        <DatePicker fx:id="filterTo" layoutX="515.0" layoutY="14.0" onAction="#filterOrders" />
+                        <ComboBox fx:id="orderStatusField" layoutX="258.0" layoutY="194.0" prefWidth="150.0" />
+                        <ListView fx:id="foodList" layoutX="439.0" layoutY="186.0" prefHeight="112.0" prefWidth="290.0" />
+                        <ListView fx:id="basicUserList" layoutX="439.0" layoutY="56.0" prefHeight="121.0" prefWidth="289.0" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab text="Menu">
+            <Tab fx:id="foodTab" onSelectionChanged="#reloadTableData" text="Food management">
+              <content>
+                <AnchorPane fx:id="foodPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ListView fx:id="cusineList" layoutX="14.0" layoutY="32.0" prefHeight="287.0" prefWidth="252.0" />
+                        <Label layoutX="14.0" layoutY="14.0" text="My Menu" />
+                        <TextField fx:id="titleCuisineField" layoutX="288.0" layoutY="32.0" prefHeight="25.0" prefWidth="194.0" />
+                        <TextField fx:id="cuisinePriceField" layoutX="288.0" layoutY="66.0" prefHeight="25.0" prefWidth="192.0" />
+                        <TextArea fx:id="ingredientsField" layoutX="288.0" layoutY="98.0" prefHeight="132.0" prefWidth="192.0" />
+                        <ListView fx:id="restaurantList" layoutX="512.0" layoutY="33.0" prefHeight="125.0" prefWidth="200.0" />
+                        <CheckBox fx:id="isSpicy" layoutX="288.0" layoutY="255.0" mnemonicParsing="false" text="Spicy" />
+                        <CheckBox fx:id="isVegan" layoutX="407.0" layoutY="255.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="71.0" text="Vegan" />
+                        <Button layoutX="288.0" layoutY="294.0" mnemonicParsing="false" onAction="#createNewMenuItem" text="New" />
+                        <Button layoutX="423.0" layoutY="294.0" mnemonicParsing="false" onAction="#updateMenuItem" text="Update" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab fx:id="chatTab" onSelectionChanged="#reloadTableData" text="Chat management">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView layoutX="14.0" layoutY="32.0" prefHeight="328.0" prefWidth="252.0" />
-                        <Label layoutX="14.0" layoutY="14.0" text="My Menu" />
-                        <ComboBox layoutX="300.0" layoutY="32.0" prefWidth="150.0" />
-                     </children>
-                  </AnchorPane>
+                        <ListView fx:id="allChats" layoutX="20.0" layoutY="14.0" prefHeight="324.0" prefWidth="227.0" />
+                        <ListView fx:id="chatMessages" layoutX="259.0" layoutY="14.0" prefHeight="324.0" prefWidth="227.0" />
+                        <Button layoutX="571.0" layoutY="164.0" mnemonicParsing="false" onAction="#updateChat" text="Update Chat" />
+                     </children></AnchorPane>
               </content>
             </Tab>
         </tabs>
